syntax = "proto3";

package Greeter;

service GreeterService {

  // 'GetFeature' rpc performs the following operations on the 'req' message fields:
  // 1) Increments req_latitude by 1 and saves in res_latitude of 'res' message.
  // 2) Increments req_num of req_oneof by 1 and saves in res_oneof's res_num field of 'res' message. 
  // 3) Appends '_response' to the req_name field of req_oneof and save in res_name field of res_oneof of 'res' message.
  rpc GetFeature(req) returns (res) {}
}

message res {
  int32 res_latitude = 1;
  oneof res_oneof {
    string res_name = 3;
    int32 res_num = 4;
  }
}

message req {
  int32 req_latitude = 1;
  oneof req_oneof {
    string req_name = 3;
    int32 req_num = 4;
  }
}